# generar_c

./: .gitignore  Cargo.toml
src/: cli.rs  env.example.rs  main.rs  menu.rs
